libs/isograph-react/src/tests/__isograph/Query/errors/output_type.ts
import type React from 'react';
import { errors as resolver } from '../../../normalizeData.test';
export type Query__errors__output_type = ReturnType<typeof resolver>;